Added changes as per logs from CI